# Video-Streaming

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_create_videos.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/handlers/: video.rs
backend/src/models/: video.rs
backend/src/services/: mod.rs  storage.rs  transcoder.rs
frontend/: Dockerfile  angular.json  package.json  proxy.conf.json  tsconfig.json
frontend/src/: hls.d.ts  index.html  main.ts  styles.css
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/components/video-edit/: video-edit.component.ts
frontend/src/app/components/video-list/: video-list.component.ts
frontend/src/app/components/video-player/: video-player.component.ts
frontend/src/app/components/video-upload/: video-upload.component.ts
frontend/src/app/services/: video.service.ts
frontend/src/assets/: README.md
nginx/: Dockerfile  nginx.conf
scripts/: init-db.sql  init-minio.sh
